added smaller images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="theme-color" content="#ffffff">
     <meta property="og:title" content="Simon & Josefin gifter sig!">
     <meta property="og:description" content="Vi vill bjuda in er till vår stora dag.">
-    <meta property="og:image" content="https://wedding.ramswaroop.me/img/hero-min.jpg">
+    <meta property="og:image" content="https://brollop.hillbom.me/img/hero-min.jpg">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -92,7 +92,7 @@
                 <h3>We are getting hitched</h3>
                 <p>The dates are 27<sup>th</sup> & 28<sup>th</sup> of November '17 and we would like you to be a part of
                     it.</p>
-                <div class="share-bar"></div>
+                <!-- <div class="share-bar"></div> -->
             </div>
         </div>
     </div>
@@ -253,7 +253,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Engagement Pics</h3>
+                <h3 class="header">Bilder på oss</h3>
             </div>
         </div>
         <div class="row">
@@ -263,7 +263,7 @@
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/_DSF2778.jpg" alt=""/>
+                        <img src="img/eng_pics/_DSF2778 copy.jpg" alt=""/>
                     </div>
                 </a>
             </div>
@@ -273,7 +273,7 @@
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/_DSF2965.jpg" alt=""/>
+                        <img src="img/eng_pics/_DSF2965 copy.jpg" alt=""/>
                     </div>
                 </a>
             </div>
@@ -283,7 +283,7 @@
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/_RJF1314 copy.jpg" alt=""/>
+                        <img src="img/eng_pics/_RJF1314 copy 2.jpg" alt=""/>
                     </div>
                 </a>
             </div>
@@ -293,7 +293,7 @@
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/DSC_0106.jpg" alt=""/>
+                        <img src="img/eng_pics/DSC_0106 copy.jpg" alt=""/>
                     </div>
                 </a>
             </div>
@@ -303,7 +303,7 @@
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/DSC_0182.jpg" alt=""/>
+                        <img src="img/eng_pics/DSC_0182 copy.jpg" alt=""/>
                     </div>
                 </a>
             </div>
@@ -313,11 +313,11 @@
                         <div class="overlay">
                             <i class="fa fa-search"></i>
                         </div>
-                        <img src="img/eng_pics/IMG_1395-ANIMATION.gif" alt=""/>
+                        <img src="img/eng_pics/IMG_1395-ANIMATION copy.gif" alt=""/>
                     </div>
                 </a>
             </div>
-            <div class="col-md-2">
+            <!-- <div class="col-md-2">
                 <a class="fancybox" rel="group" href="img/eng_pics/IMG_1588.jpg">
                     <div class="img-wrap">
                         <div class="overlay">
@@ -336,7 +336,7 @@
                         <img src="img/eng_pics/IMG_2947.jpg" alt=""/>
                     </div>
                 </a>
-            </div>
+            </div> -->
         </div>
     </div>
     <div class="container">
