--- a/index.html
+++ b/index.html
@@ -355,9 +355,9 @@
 </section>
 
 <section id="video-bg" class="hidden-sm hidden-xs">
-    <div id="bgndVideo" class="player"
+    <!-- <div id="bgndVideo" class="player"
          data-property="{videoURL:'https://www.youtube.com/watch?v=gIs-KstpMHI',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:80, stopAt:259, opacity:1}">
-    </div>
+    </div> -->
     <div id="video-content">
         <h5>Bröllop i Åhus</h5>
         <p>Bo i Bröllopslokalen eller på Hotell!</p>
@@ -489,7 +489,7 @@
 <script src="js/jquery.fancybox.pack.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/jquery.flexslider-min.js"></script>
-<script src="js/jquery.mb.YTPlayer.min.js"></script>
+<!-- <script src="js/jquery.mb.YTPlayer.min.js"></script> -->
 <script src="js/vendor/jquery.waypoints.min.js"></script>
 <script src="js/vendor/ouical.js"></script>
 <script src="js/scripts.min.js"></script>
