--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div>
-            <div class="col-md-6">
+            <!-- <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div> -->
+            <div class="col-md-6 col-md-offset-3">
                 <p>
                     I first saw Antara in the Fall of 2008 when we started our undergrad. I was instantly attracted to
                     her but was far too nervous to speak to her. I had told my friend I liked her and news had traveled
@@ -120,7 +120,7 @@
                     and the rest is history :)
                 </p>
             </div>
-            <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div>
+            <!-- <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div> -->
         </div>
         <div class="row">
             <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/IMG_2317.jpg" class="wp8"></div>
@@ -139,17 +139,13 @@
         <div class="row">
             <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
                 <div class="wp3">
-                    <p><strong>27th November</strong></p>
+                    <p><strong>7e September</strong></p>
 
-                    <h5>Mehndi <span class="time">1PM - 5PM</span></h5>
-                    <p>It's one of the oldest traditional Indian pre wedding ceremony where the bride and groom
-                        attend the event together and a professional mehndi artist applies
-                        mehndi to the bride's hands and feet. This will be having a celebratory
-                        festival feel to it with people wearing vibrant clothes and dancing, singing, playing
-                        games and a lot more.</p>
+                    <h5>Vigsel <span class="time">10 - 13</span></h5>
+                    <p>Borgerlig vigsel där vädret tillåter. Fina ord och ringar utdelas. fteråt serveras bubbel och tårta.</p>
                 </div>
                 <div class="wp5">
-                    <h5>Cocktail Night <span class="time">7PM - 12AM</span></h5>
+                    <h5>Middag <span class="time">16 - 22</span></h5>
                     <p>This event is no way close to ethnic. The bride & groom would like to have some "shots before the
                         knot". With booze flowing down the floor and the western attire on, everyone would be busy
                         showing off their new moves on the stage which they have finely honed. Lastly, expect some beer
@@ -158,16 +154,16 @@
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
                 <div class="wp4">
-                    <p><strong>28th November</strong></p>
+                    <p><strong>8 September</strong></p>
 
-                    <h5>Haldi <span class="time">10AM-11AM</span></h5>
+                    <h5>Kvällsdopp <span class="time">03:00</span></h5>
                     <p>The haldi ceremony is usually held separately for the bride and the groom. This one is for the
                         bride. It is a low-key event that involves the application of turmeric paste on the hands, legs
                         and face of the bride. The groom is not allowed to see the bride after this ritual until the
                         final wedding ceremony starts.</p>
                 </div>
                 <div class="wp6">
-                    <h5>Wedding <span class="time">6PM-12AM</span></h5>
+                    <h5>Frunch <span class="time">9:00 - 12:00</span></h5>
                     <p>This is the main event in the entire wedding when the bride and the groom tie the
                         knot. The groom comes with the barat and is greeted by the bride side with some dhol of course
                         as maximum number of guests would be attending this event. This is when the couple circle the
