--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Bilder på oss</h3>
+                <h3 class="header">Bilder på brudparet</h3>
             </div>
         </div>
         <div class="row">
@@ -365,8 +365,8 @@
 
 <section id="map" class="section-padding">
     <div class="text-center">
-        <h3>How do I get there?</h3>
-        <p>It's way easier than you think!</p>
+        <h3>Hur tar jag mig dit?</h3>
+        <p>Med bil eller buss!</p>
     </div>
     <div id="map-canvas"></div>
     <div id="map-content-wrapper" class="container pointer-events-none">
@@ -408,8 +408,8 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
                     </button>
                     <div class="section-padding">
-                        <h3>Thank you!</h3>
-                        <p>We are glad to see you join us on our big day.</p>
+                        <h3>Tack så mycket!</h3>
+                        <p>Vi ser fram emot att träffa er på vår stora dag.</p>
                         <div id="add-to-cal"></div>
                     </div>
                 </div>
@@ -420,8 +420,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
-                <h3>What are you waiting for?</h3>
-                <p>We would greatly appreciate if you could RSVP before 1st of November '17</p>
+                <h3>Vad väntar du på?</h3>
+                <p>Svara så fort som möjligt, gärna innan Augusti!</p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
@@ -429,14 +429,14 @@
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
                                 <i class="fa fa-envelope"></i><input type="email" name="email" class=""
-                                                                     placeholder="Your email"
+                                                                     placeholder="Mailaddress"
                                                                      required>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
                                 <i class="fa fa-user"></i><input name="name" class=""
-                                                                 placeholder="Your name"
+                                                                 placeholder="Namn"
                                                                  required>
                             </div>
                         </div>
@@ -444,9 +444,9 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="form-input-group">
-                                <i class="fa fa-users"></i><input type="number" name="extras" class="" min="0"
-                                                                  max="4"
-                                                                  placeholder="Husband/Wife or kids"
+                                <i class="fa fa-users"></i><input type="number" name="extras" class="" min="1"
+                                                                  max="5"
+                                                                  placeholder="Hur många är ni?"
                                                                   required>
                             </div>
                         </div>
@@ -454,7 +454,7 @@
                             <div class="form-input-group">
                                 <i class="fa fa-key"></i><input type="number" name="invite_code" id="invite_code"
                                                                 class="" min="0"
-                                                                placeholder="Invite code"
+                                                                placeholder="Inbjudningskod"
                                                                 required>
                             </div>
                         </div>
@@ -463,8 +463,8 @@
                         <div class="col-md-12" id="alert-wrapper"></div>
                     </div>
                     <button class="btn-fill rsvp-btn">
-                        Yes,
-                        that's me!
+                        Ja,
+                        det är jag!
                     </button>
                 </form>
             </div>
@@ -477,7 +477,7 @@
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <p>Crafted by Ram with lots of <span class="fa fa-heart pulse2"></span> for Antara</p>
+                <p>Josefin <span class="fa fa-heart pulse2"></span> Simon</p>
             </div>
         </div>
     </div>
