--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
-                            <li><a href="#intro">How we met</a></li>
-                            <li><a href="#events">Events</a></li>
+                            <li><a href="#intro">Simon & Josefin</a></li>
+                            <li><a href="#events">Händelser</a></li>
                             <li><a href="#instagram">Instagram</a></li>
-                            <li><a href="#eng-pics">Engagement</a></li>
-                            <li class="hidden-sm hidden-xs"><a href="#video-bg">Glimpse of the city</a></li>
+                            <li><a href="#eng-pics">Bilder</a></li>
+                            <li class="hidden-sm hidden-xs"><a href="#video-bg">Åhus</a></li>
                         </ul>
                         <ul class="member-actions">
-                            <li><a href="#map" class="login">Venue</a></li>
-                            <li><a href="#rsvp" class="btn-white btn-small">RSVP</a></li>
+                            <li><a href="#map" class="login">Strandvillan</a></li>
+                            <li><a href="#rsvp" class="btn-white btn-small">OSA</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -364,9 +364,22 @@
 </section>
 
 <section id="map" class="section-padding">
-    <div class="text-center">
+    <div class="col-md-6 col-md-offset-3 text-center">
+    <div>
         <h3>Hur tar jag mig dit?</h3>
-        <p>Med bil eller buss!</p>
+        <p>Med bil eller buss! Du kommer hitta när du hittar. Det tar ungefär en kvart att gå från 
+            hållplatsen Åhusbryggan.
+        </p>
+    </div>
+    <div>
+        <h3>Hur bor vi</h3>
+        <p>I Strandvillan där bröllopet sker finns det totalt 50 bäddar fördelade på ungefär 14 sovrum.
+        Det är våningssängar och man får ta med egna sängkläder, men vi bjuder på boendet. Om man vill sova
+        mer privat kan man boka precis vilket hotell man vill eller sätta upp ett tält. Vill man boka hotell 
+        rekommenderar vi Åhus Resort, ange att ni ska på vårat bröllop så får ni rabatt. Det bör kosta under 1000 
+        kronor för en stuga med 4 bäddar
+        </p>
+    </div>
     </div>
     <div id="map-canvas"></div>
     <div id="map-content-wrapper" class="container pointer-events-none">
@@ -474,7 +487,7 @@
                                                                 required>
                                                             <option value="" disabled selected>Hur vill du bo?</option>
                                                             <option value="No">Jag vill sova våningssäng</option>
-                                                            <option value="Yes">Jag vill köpa till stugboende</option>
+                                                            <option value="Yes">Jag fixar eget boende!</option>
                                                             </select>
                             </div>
                         </div>
