--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>I September blir det bröllop</h3>
-                <p>Den 7e September 2019 gifter vi oss och bjuder in er till att fira med oss!</p>
+                <p>Vi bjuder in er till att fira med oss!</p>
                 <!-- <div class="share-bar"></div> -->
             </div>
         </div>
