--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
     <meta property="og:title" content="Simon & Josefin gifter sig!">
-    <meta property="og:description" content="Vi vill bjuda in er till vårat bröllop!.">
+    <meta property="og:description" content="Vi vill bjuda in er till bröllop!.">
     <meta property="og:image" content="https://brollop.hillbom.me/img/hero-min.jpg">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -72,7 +72,7 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="hero-content text-center">
-                    <!--<h1>Ram and Antara</h1>-->
+                    <!-- <h1>Ram and Antara</h1> -->
                     <img src="img/logo-lg.png">
                     <!--<p class="intro">Ram & Antara are getting hitched!</p>-->
                     <!--<a href="#" class="btn btn-fill btn-large btn-margin-right">Scroll Down</a> -->
@@ -236,7 +236,7 @@
             <div class="col-md-12 text-center">
                 <h3>A picture is worth a thousand words!</h3>
                 <p>Help us capture the moment, tag your photos with the hashtag
-                    <a href="https://instagram.com/explore/tags/ramandantara/" target="_blank">#RamAndAntara</a>
+                    <a href="https://instagram.com/explore/tags/josefinsimon/" target="_blank">#JosefinSimon</a>
                 </p>
             </div>
         </div>
