added dress code

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="row section-padding">
             <div class="col-md-4 col-md-offset-4 text-center">
                 <a class="btn btn-accent btn-small" data-toggle="modal" data-target="#dc-modal">
-                    <i class="fa fa-barcode"></i>&nbsp;&nbsp;Dress code
+                    <i class="fa fa-barcode"></i>&nbsp;&nbsp;Klädkod
                 </a>
             </div>
         </div>
@@ -190,38 +190,21 @@
                 <div class="modal-body">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
                     </button>
-                    <h3 class="text-center section-padding">Ugh... dress codes?</h3>
-                    <h5>Mehndi <span class="time">1PM - 5PM</span></h5>
+                    <h3 class="text-center section-padding">Klädkoden är kavaj</h3>
+                    <h5>Flickor</h5>
                     <p>
-                        <strong>Ethnic indian wear</strong>
+                        <strong>Klänning</strong>
                         <br>
-                        Ladies can wear something
-                        <a href="https://www.pinterest.com/ramswarooppatra/mehndi-dress-for-women/">bright & vivid</a>
-                        and gentlemen can be on
-                        their <a href="https://www.pinterest.com/ramswarooppatra/mehndi-dress-for-men/">vibrant
-                        kurtas</a> with pants or pyjamas along with an optional shawl.
+                        Ta något glatt och fint. Klänning, byxdress eller något roligt! Färgen vit är reserverad av Josefin!
+                        <a target="_blank" href="https://www.google.se/search?safe=active&biw=1127&bih=916&tbm=isch&sa=1&ei=0KKjXIvFD86cmwWv3IuABw&q=kl%C3%A4dkod+kavaj+dam+sommarbr%C3%B6llop&oq=kl%C3%A4dkod+kavaj+dam+sommarbr%C3%B6llop&gs_l=img.3...1056.2114..2166...0.0..0.87.504.6......1....1..gws-wiz-img.4O3jdOu3hcw">Exempel</a>
                     </p>
-                    <h5>Cocktail Night <span class="time">7PM - 12AM</span></h5>
+                    <h5>Pojkar</h5>
                     <p>
-                        <strong>Western attire</strong>
+                        <strong>Kostym / Kavaj</strong>
                         <br>
-                        A semi-formal look that is contemporary & fashionable which is not too prim & proper is the best
-                        to pull off this night. You can see some pins for
-                        <a href="https://www.pinterest.com/ramswarooppatra/cocktail-night-outfit-for-women/">ladies</a>
-                        & <a href="https://www.pinterest.com/ramswarooppatra/cocktail-night-outfit-for-men/">gents</a>.
-                    </p>
-                    <h5>Wedding <span class="time">6PM-12AM</span></h5>
-                    <p>
-                        <strong>Indo-western</strong>
-                        <br>
-                        Ladies can flaunt their unconventional sarees,
-                        <a href="https://www.pinterest.com/ramswarooppatra/indo-western-lehengas/">lehengas</a>,
-                        <a href="https://www.pinterest.com/ramswarooppatra/indo-western-anarkalis/">anarkalis</a>,
-                        dresses and the list
-                        goes on whereas gentlemen can wear any kind of suit or just blazer. If you don't like to wear a
-                        suit/blazer, you can do a <a
-                            href="https://www.pinterest.com/ramswarooppatra/high-neck-jackets-for-men/">high-neck
-                        (band gala) waistcoat & shirt</a> combo.
+                        Lite lagom stelt. Då det nästan är sommar och säkerligen varmt passar det bra med något snäppet lättare.
+                        Kostym går förstås också bra, det gör det alltid!
+                        <a target="_blank" href="https://www.google.se/search?safe=active&biw=1127&bih=916&tbm=isch&sa=1&ei=oaKjXIWzA6aLk74P2vKUoAQ&q=kl%C3%A4dkod+kavaj+herr+sommar&oq=kl%C3%A4dkod+kavaj+herr+sommar&gs_l=img.3...3642.4402..4469...0.0..0.98.528.6......1....1..gws-wiz-img.......0i30.hMb4A0BWhZU">Exempel</a>
                     </p>
                 </div>
             </div><!-- /.modal-content -->
