added fun hashtags

--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3>A picture is worth a thousand words!</h3>
-                <p>Help us capture the moment, tag your photos with the hashtag
+                <h3>10 Megapixlar säger mer än 1000 ord.</h3>
+                <p>Hjälp oss fånga festen! Under kvällen kommer bilderna ni taggar korrekt att synas direkt på en skärm 📸
                     <a href="https://instagram.com/explore/tags/josefinsimon/" target="_blank">#JosefinSimon</a>
                 </p>
             </div>
