--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>I September blir det bröllop</h3>
-                <p>Vi bjuder in er till att fira med oss!</p>
+                <p>Vi bjuder in er till att fira vår kärlek med oss!</p>
                 <!-- <div class="share-bar"></div> -->
             </div>
         </div>
@@ -112,12 +112,9 @@
             <!-- <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div> -->
             <div class="col-md-6 col-md-offset-3">
                 <p>
-                    I first saw Antara in the Fall of 2008 when we started our undergrad. I was instantly attracted to
-                    her but was far too nervous to speak to her. I had told my friend I liked her and news had traveled
-                    fast and she soon found out. Her first reaction was "Who is Ram?" and she began searching for me in
-                    the class. She started to take notice of me and no matter how boring the lecture was, we never
-                    missed a class after that. After a good few months I finally plucked up the courage to ask her out
-                    and the rest is history :)
+                    Vi träffades första gången under nollningen på LTH 2011. Under studietiden har vi fått
+                    många år av roliga utflykter, fester och minnen tillsammans. Vi började dejta efter sommaren
+                    2017 och det var kärlek från första kyssen. Vi är lika nykära nu som då!
                 </p>
             </div>
             <!-- <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div> -->
@@ -133,41 +130,41 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h3 class="header">Events</h3>
+                <h3 class="header">Händelser</h3>
             </div>
         </div>
         <div class="row">
             <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
                 <div class="wp3">
-                    <p><strong>7e September</strong></p>
+                    <p><strong>Lördag</strong></p>
 
-                    <h5>Vigsel <span class="time">10 - 13</span></h5>
-                    <p>Borgerlig vigsel där vädret tillåter. Fina ord och ringar utdelas. fteråt serveras bubbel och tårta.</p>
+                    <h5>Vigsel <span class="time">15</span></h5>
+                    <p>Borgerlig vigsel där vädret tillåter. Fina ord och ringar utdelas. 
+                    </p>
                 </div>
                 <div class="wp5">
-                    <h5>Middag <span class="time">16 - 22</span></h5>
-                    <p>This event is no way close to ethnic. The bride & groom would like to have some "shots before the
-                        knot". With booze flowing down the floor and the western attire on, everyone would be busy
-                        showing off their new moves on the stage which they have finely honed. Lastly, expect some beer
-                        pong matches & karaoke for sure.</p>
+                    <h5>Mingel <span class="time">16 - 18</span></h5>
+                    <p>Brudskål med tårta. Passa på att prata med oss och gästerna.</p>
+                </div>
+                <div class="wp7">
+                    <h5>Middag <span class="time">18 - 23</span></h5>
+                    <p>Vi avnjuter en trerätters middag tillsammans.</p>
                 </div>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
                 <div class="wp4">
-                    <p><strong>8 September</strong></p>
+                    <p><strong>Söndag</strong></p>
 
-                    <h5>Kvällsdopp <span class="time">03:00</span></h5>
-                    <p>The haldi ceremony is usually held separately for the bride and the groom. This one is for the
-                        bride. It is a low-key event that involves the application of turmeric paste on the hands, legs
-                        and face of the bride. The groom is not allowed to see the bride after this ritual until the
-                        final wedding ceremony starts.</p>
+                    <h5>Kvällsdopp <span class="time">3?</span></h5>
+                    <p>Efter fest och dans kanske ni är varma och det kan bli skönt att ta ett dopp. Glöm inte att utse 
+                        en badvakt!</p>
                 </div>
                 <div class="wp6">
-                    <h5>Frunch <span class="time">9:00 - 12:00</span></h5>
-                    <p>This is the main event in the entire wedding when the bride and the groom tie the
-                        knot. The groom comes with the barat and is greeted by the bride side with some dhol of course
-                        as maximum number of guests would be attending this event. This is when the couple circle the
-                        sacred fire and are finally declared husband and wife.</p>
+                    <h5>Frunch <span class="time">9 - 12</span></h5>
+                    <p>Vi hoppas att ni vaknar med inte alltför tunga huvuden och vill äta frukost med oss. Under frunchen hinner
+                        ni reda ut alla lösa trådar från kvällen innan och vi passar på att öppna eventuella presenter 🎁för er som
+                        är nyfikna! 
+                    </p>
                 </div>
             </div>
         </div>
