--- a/index.html
+++ b/index.html
@@ -355,9 +355,9 @@
         <h3>Hur bor vi</h3>
         <p>I Strandvillan där bröllopet sker finns det totalt 50 bäddar fördelade på ungefär 14 sovrum.
         Det är våningssängar och man får ta med egna sängkläder, men vi bjuder på boendet. Om man vill sova
-        mer privat kan man boka precis vilket hotell man vill eller sätta upp ett tält. Vill man boka hotell 
-        rekommenderar vi Åhus Resort, ange att ni ska på vårat bröllop så får ni rabatt. Det bör kosta under 1000 
-        kronor för en stuga med 4 bäddar
+        mer privat kan man boka precis vilket hotell man vill eller sätta upp ett tält. </p>
+        <p>Vill man boka hotell rekommenderar vi <strong>Åhus Resort</strong>, ange att ni ska på vårat bröllop så får ni rabatt. 
+        Det bör kosta under 1000 kronor för en stuga med 4 bäddar
         </p>
     </div>
     </div>
@@ -508,7 +508,7 @@
 
 
 <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJcNyeUJU97M1Kl1EgbC135mh1B-99URE&callback=initMap"></script>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJcNyeUJU97M1Kl1EgbC135mh1B-99URE&language=sv&callback=initMap"></script>
 <!-- Google Analytics -->
 <script>
     (function (i, s, o, g, r, a, m) {
