uppdateade mer text

--- a/index.html
+++ b/index.html
@@ -339,7 +339,9 @@
     </div> -->
     <div id="video-content">
         <h5>Bröllop i Åhus</h5>
-        <p>Bo i Bröllopslokalen eller på Hotell!</p>
+        <p>Vigseln är klockan 14 på Lördagen, men det går bra att komma tidigare och installera sig i sitt boende
+            och kanske ta ett dopp innan ni svidar om.
+        </p>
     </div>
 </section>
 
@@ -347,8 +349,8 @@
     <div class="col-md-6 col-md-offset-3 text-center">
     <div>
         <h3>Hur tar jag mig dit?</h3>
-        <p>Med bil eller buss! Du kommer hitta när du hittar. Det tar ungefär en kvart att gå från 
-            hållplatsen Åhusbryggan.
+        <p>Med bil eller buss! Du kommer hitta när du hittar. Det finns gott om plats att parkera vid villan.
+           Det tar ungefär en kvart att gå från hållplatsen Åhusbryggan om du väljer att åka kollektivt.
         </p>
     </div>
     <div>
