lade till önskelista

--- a/index.html
+++ b/index.html
@@ -362,6 +362,24 @@
         Det bör kosta under 1000 kronor för en stuga med 4 bäddar
         </p>
     </div>
+    <dic>
+        <h3>Önskelista</h3>
+        <p>
+        Önskelista
+        Vi har skrivit en liten lista på saker vi önskar oss, har ni ändå svårt att komma på något gillar vi vin och saker man kan äta. 
+        Vill ni heller överraska med ett fint handarbete eller på annat sätt bidra till bröllopet så uppskattar vi det också. 
+        Pratar ni med Sanda Olson så kan hon hjälpa till om ni behöver råd eller har frågor om presenterna. 
+        
+        <ul>
+            <li>Tandemcykel </li>
+            <li>En ankarsrum hushållsmaskin. </li>
+            <li>Ittala chanpangeglas </li>
+            <li>Konst</li>
+            <li>Presentkort på matservis</li>
+        </ul>
+                
+        </p>
+    </div>
     </div>
     <div id="map-canvas"></div>
     <div id="map-content-wrapper" class="container pointer-events-none">
