nu är hemsidan klar

--- a/index.html
+++ b/index.html
@@ -92,45 +92,45 @@
 <section id="invitation" class="section-padding">
     <div class="container">
         <div class="row">
-            <div class="col-md-12 text-center">
+            <div class="col-md-6 col-md-offset-3 text-center">
                 <h3>I September blir det bröllop</h3>
-                <p>Vi bjuder in er till att fira vår kärlek med oss!</p>
+                <p>Vi bjuder in er till att fira vår kärlek med oss! Det blir ett mysigt bröllop med vigsel på stranden.</p>
                 <!-- <div class="share-bar"></div> -->
             </div>
         </div>
     </div>
 </section>
 
-<section id="intro">
+<!-- <section id="intro">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Om brudparet och familj?</h3>
+                <h3 class="header">Om brudparet</h3>
             </div>
         </div>
         <div class="row">
-            <!-- <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div> -->
+             <div class="col-md-3 hidden-sm hidden-xs"><img src="img/IMG_2317.jpg" class="wp1"></div> 
             <div class="col-md-6 col-md-offset-3">
                 <p>
                     Vi träffades första gången under nollningen på LTH 2011. Under studietiden har vi fått
                     många år av roliga utflykter, fester och minnen tillsammans. Vi började dejta efter sommaren
-                    2017 och det var kärlek från första kyssen. Vi är lika nykära nu som då!
+                    2016 och det var kärlek från första kyssen. Vi är lika nykära nu som då!
                 </p>
             </div>
-            <!-- <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div> -->
+            <!-- <div class="col-md-3 hidden-sm hidden-xs"><img src="img/DSD_0214.jpg" class="wp2"></div> 
         </div>
         <div class="row">
             <!-- <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/IMG_2317.jpg" class="wp8"></div>
-            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/DSD_0214.jpg" class="wp9"></div> -->
+            <div class="col-sm-4 col-sm-push-2 col-xs-6 hidden-md hidden-lg"><img src="img/DSD_0214.jpg" class="wp9"></div> 
         </div>
     </div>
-</section>
+</section> -->
 
 <section class="events section-padding" id="events">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h3 class="header">Händelser</h3>
+                <h3 class="header">Bröllopschema</h3>
             </div>
         </div>
         <div class="row">
@@ -148,20 +148,20 @@
                 </div>
                 <div class="wp7">
                     <h5>Middag <span class="time">18 - 23</span></h5>
-                    <p>Vi avnjuter en trerätters middag tillsammans.</p>
+                    <p>Vi äter middag tillsammans. Efter maten är det dans!</p>
                 </div>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
                 <div class="wp4">
                     <p><strong>Söndag</strong></p>
 
-                    <h5>Kvällsdopp <span class="time">3?</span></h5>
+                    <h5>Kvällsdopp <span class="time">3 ?</span></h5>
                     <p>Efter fest och dans kanske ni är varma och det kan bli skönt att ta ett dopp. Glöm inte att utse 
                         en badvakt!</p>
                 </div>
                 <div class="wp6">
-                    <h5>Frunch <span class="time">9 - 12</span></h5>
-                    <p>Vi hoppas att ni vaknar med inte alltför tunga huvuden och vill äta frukost med oss. Under frunchen hinner
+                    <h5>Frukost <span class="time">9 - 12</span></h5>
+                    <p>Vi hoppas att ni vaknar med inte alltför tunga huvuden och vill äta frukost med oss. Under frukosten hinner
                         ni reda ut alla lösa trådar från kvällen innan och vi passar på att öppna eventuella presenter 🎁 för er som
                         är nyfikna! 
                     </p>
@@ -339,7 +339,7 @@
     </div> -->
     <div id="video-content">
         <h5>Bröllop i Åhus</h5>
-        <p>Vigseln är klockan 14 på Lördagen, men det går bra att komma tidigare och installera sig i sitt boende
+        <p>Vigseln är klockan 15 på Lördagen, men det går bra att komma tidigare och installera sig i sitt boende
             och kanske ta ett dopp innan ni svidar om.
         </p>
     </div>
@@ -355,11 +355,11 @@
     </div>
     <div>
         <h3>Hur bor vi</h3>
-        <p>I Strandvillan där bröllopet sker finns det totalt 50 bäddar fördelade på ungefär 14 sovrum.
+        <p>I Strandvillan där bröllopet sker finns det totalt 50 bäddar fördelade på ungefär 14 sovrum. Det är först till kvar på sängplatserna!
         Det är våningssängar och man får ta med egna sängkläder, men vi bjuder på boendet. Om man vill sova
         mer privat kan man boka precis vilket hotell man vill eller sätta upp ett tält. </p>
         <p>Vill man boka hotell rekommenderar vi <strong>Åhus Resort</strong>, ange att ni ska på vårat bröllop så får ni rabatt. 
-        Det bör kosta under 1000 kronor för en stuga med 4 bäddar
+        Det bör kosta runt 1000 kronor för en stuga med 4 bäddar
         </p>
     </div>
     <dic>
@@ -371,10 +371,10 @@
         Pratar ni med Sanda Olson så kan hon hjälpa till om ni behöver råd eller har frågor om presenterna. 
         
         <ul>
-            <li>Tandemcykel </li>
-            <li>En ankarsrum hushållsmaskin. </li>
-            <li>Ittala chanpangeglas </li>
+            <li>En ankarsrum hushållsmaskin</li>
             <li>Konst</li>
+            <li>Ittala chanpangeglas </li>
+            <li>Tandemcykel</li>
             <li>Presentkort på matservis</li>
         </ul>
                 
@@ -398,7 +398,17 @@
                         </div>
                         <div class="col-md-6">
                             <h5>Kontakt</h5>
-                            <p><i class="fa fa-mobile"></i> <a href="tel://044289305">044 28 93 05</a><br></p>
+                            <p><i class="fa fa-mobile"></i> <a href="tel://+46731563887 ">Toastmaster (073-1563887)</a><br></p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h5><a href="http://ahusresort.se/">Åhus Resort</a></h5>
+                            <p>Kolonivägen 39, 296 32 Åhus</p>
+                        </div>
+                        <div class="col-md-6">
+                            <h5>Kontakt</h5>
+                            <p><i class="fa fa-mobile"></i> <a href="tel://+46708289301">070-8289301</a><br></p>
                         </div>
                     </div>
                     <div class="row text-center">
@@ -434,7 +444,7 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <h3>Vad väntar du på?</h3>
-                <p>Svara så fort som möjligt, gärna innan Augusti!</p>
+                <p>Svara så fort som möjligt, innan Juli!</p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
