--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <title>Simon & Josefin gifter sig!</title>
-    <meta name="description" content="Vi vill bjuda in er till vårat bröllop!.">
+    <meta name="description" content="Vi vill bjuda in er till vårat bröllop!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
     <meta property="og:title" content="Simon & Josefin gifter sig!">
-    <meta property="og:description" content="Vi vill bjuda in er till bröllop!.">
+    <meta property="og:description" content="Vi vill bjuda in er till bröllop!">
     <meta property="og:image" content="https://brollop.hillbom.me/img/hero-min.jpg">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
