--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <title>Simon & Josefin gifter sig!</title>
-    <meta name="description" content="Vi vill bjuda in er till vårat bröllop!">
+    <meta name="description" content="Vi vill bjuda in er till vårat bröllop!§">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
     <meta property="og:title" content="Simon & Josefin gifter sig!">
@@ -144,7 +144,7 @@
                 </div>
                 <div class="wp5">
                     <h5>Mingel <span class="time">16 - 18</span></h5>
-                    <p>Brudskål med tårta. Passa på att prata med oss och gästerna.</p>
+                    <p>Brudskål med tårta. Passa på att mingla med oss och gästerna.</p>
                 </div>
                 <div class="wp7">
                     <h5>Middag <span class="time">18 - 23</span></h5>
@@ -355,10 +355,10 @@
     </div>
     <div>
         <h3>Hur bor vi</h3>
-        <p>I Strandvillan där bröllopet sker finns det totalt 50 bäddar fördelade på ungefär 14 sovrum. Det är först till kvar på sängplatserna!
+        <p>I Strandvillan där bröllopet sker finns det totalt 50 bäddar fördelade på ungefär 14 sovrum. Det är först till kvarn på sängplatserna!
         Det är våningssängar och man får ta med egna sängkläder, men vi bjuder på boendet. Om man vill sova
         mer privat kan man boka precis vilket hotell man vill eller sätta upp ett tält. </p>
-        <p>Vill man boka hotell rekommenderar vi <strong>Åhus Resort</strong>, ange att ni ska på vårat bröllop så får ni rabatt. 
+        <p>Vill man boka hotell rekommenderar vi <strong>Åhus Resort</strong>, ange att ni ska på vårt bröllop så får ni rabatt. 
         Det bör kosta runt 1000 kronor för en stuga med 4 bäddar
         </p>
     </div>
@@ -368,12 +368,12 @@
         Önskelista
         Vi har skrivit en liten lista på saker vi önskar oss, har ni ändå svårt att komma på något gillar vi vin och saker man kan äta. 
         Vill ni heller överraska med ett fint handarbete eller på annat sätt bidra till bröllopet så uppskattar vi det också. 
-        Pratar ni med Sanda Olson så kan hon hjälpa till om ni behöver råd eller har frågor om presenterna. 
+        Pratar ni med Sandra Olsson så kan hon hjälpa till om ni behöver råd eller har frågor om presenterna. 
         
         <ul>
             <li>En ankarsrum hushållsmaskin</li>
             <li>Konst</li>
-            <li>Ittala chanpangeglas </li>
+            <li>Ittala champagneglas </li>
             <li>Tandemcykel</li>
             <li>Presentkort på matservis</li>
         </ul>
