--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
                             <li><a href="#events">Händelser</a></li>
                             <li><a href="#instagram">Instagram</a></li>
                             <li><a href="#eng-pics">Bilder</a></li>
-                            <li class="hidden-sm hidden-xs"><a href="#video-bg">Åhus</a></li>
                         </ul>
                         <ul class="member-actions">
-                            <li><a href="#map" class="login">Strandvillan</a></li>
+                            <li><a href="#video-bg" class="login">Information</a></li>
                             <li><a href="#rsvp" class="btn-white btn-small">OSA</a></li>
                         </ul>
                     </nav>
@@ -362,7 +361,17 @@
         Det bör kosta runt 1000 kronor för en stuga med 4 bäddar
         </p>
     </div>
-    <dic>
+    <div>
+        <h3>Kontakt</h3>
+        <p>Vill du hålla ett tal eller spexa? Kanske du har några övriga frågor? Kontakta någon av följande personer</p>
+        <ul>
+            <li><a href="tel://+46731563887">Toastmaster Robin (0731 56 38 87)</a></li>
+            <li><a href="tel://+46733321433">Toastmaster Mazdak (0733 32 14 33)</a></li>
+            <li><a href="tel://+46703978063">Sandra (0703 97 80 63)</a></li>
+            <li><a href="tel://+46734323512">Simon (0734 32 35 12)</a></li>
+        </ul>
+    </div>
+    <div>
         <h3>Önskelista</h3>
         <p>
         Önskelista
@@ -371,8 +380,10 @@
         Pratar ni med Sandra Olsson så kan hon hjälpa till om ni behöver råd eller har frågor om presenterna. 
         
         <ul>
-            <li>En ankarsrum hushållsmaskin</li>
-            <li>Konst</li>
+            
+            <li><a target="_blank" href="https://www.cervera.se/onskelista/ju04ui3f">Saker från Cervera</a></li>
+
+            <li>Konst och design</li>
             <li>Ittala champagneglas </li>
             <li>Tandemcykel</li>
             <li>Presentkort på matservis</li>
@@ -444,7 +455,7 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <h3>Vad väntar du på?</h3>
-                <p>Svara så fort som möjligt, innan Juli!</p>
+                <p>Svara så fort som möjligt, innan Juli! Kan du inte komma så gärna en signal!</p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
