--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
         Pratar ni med Sandra Olsson så kan hon hjälpa till om ni behöver råd eller har frågor om presenterna. 
         
         <ul>
-            
+            <li><a target="_blank" href="https://elsa.elle.se/presentideer-till-student-och-brollop/">🎁 Elsa Billgren tipsar</a></li>
             <li><a target="_blank" href="https://www.cervera.se/onskelista/ju04ui3f">🍽 Saker från Cervera</a></li>
             <li>🖼 Konst och design</li>
             <li>🚲 Tandemcykel</li>
