--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
         <h3>Kontakt</h3>
         <p>Vill du hålla ett tal eller spexa? Kanske du har några övriga frågor? Kontakta någon av följande personer</p>
         <ul>
+            <li><a href="mailto:toastmasters@hillbom.me">Toastmasters@hillbom.me</a></li>
             <li><a href="tel://+46731563887">Toastmaster Robin (0731 56 38 87)</a></li>
             <li><a href="tel://+46733321433">Toastmaster Mazdak (0733 32 14 33)</a></li>
             <li><a href="tel://+46703978063">Sandra (0703 97 80 63)</a></li>
@@ -404,7 +405,7 @@
                         </div>
                         <div class="col-md-6">
                             <h5>Kontakt</h5>
-                            <p><i class="fa fa-mobile"></i> <a href="tel://+46731563887 ">Toastmaster (073-1563887)</a><br></p>
+                            <p><i class="fa fa-mobile"></i> <a href="tel://+46734323512 ">Simon (073-4323512)</a><br></p>
                         </div>
                     </div>
                     <div class="row">
