--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta property="og:description" content="Vi vill bjuda in er till bröllop!">
     <meta property="og:image" content="https://brollop.hillbom.me/img/hero-min.jpg">
     <meta property="og:type" content="website">
+    <meta name="google-site-verification" content="ZHed7jVhjG8GGgDazU_vzIKCQQQ1Tz67azRrFjJZj-U" />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="256x256" href="favicon-256x256.png">
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
