--- a/index.html
+++ b/index.html
@@ -513,8 +513,9 @@
                     <div class="row">
                         <div class="col-md-12" id="alert-wrapper"></div>
                     </div>
-                    <button class="btn-fill rsvp-btn">
-                        Detta ser ut att stämma!
+                    <button class="btn-fill rsvp-btn disabled">
+                        <!-- Detta ser ut att stämma! -->
+                        Anmälan är stängd
                     </button>
                 </form>
             </div>
