--- a/graph/index.html
+++ b/graph/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html lang="sv">
 <head>
     <meta charset="UTF-8">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css">
+    <script src="https://unpkg.com/vis-network@latest/dist/vis-network.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/vis-network@latest/dist/vis-network.min.css">
     <link rel="stylesheet" href="style.css">
 
     <script src="./script.js"></script>
